# attention

./: .gitignore  config.json  generate.py  generate_c.py  generate_w.py  main.py  main_c.py  main_w.py  main_words.py  pyproject.toml  train.py
src/: config.py  flash_attn.py  optimizer.py  tokenization.py  training.py  transformer.py  utils.py
