[project]
name = "attention"
version = "0.1.0"
description = "PyTorch transformer implementation with character and word-level tokenization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hydra-core>=1.3.2",
  "ipython>=8.32.0",
  "loguru>=0.7.3",
  "mlflow>=3.8.1",
  "numpy>=2.2.2",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.1",
  "torch>=2.6.0",
  "tqdm>=4.67.1",
]

[project.scripts]
train-char = "train:main"
train-word = "train:main"

[dependency-groups]
dev = [
  "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort (import sorting)
  "N",      # pep8-naming
  "UP",     # pyupgrade (modernize code)
  "B",      # flake8-bugbear (find bugs)
  "C4",     # flake8-comprehensions
  "SIM",    # flake8-simplify
  "NPY",    # numpy-specific rules
  "PERF",   # performance anti-patterns
  "RUF",    # ruff-specific rules
]
ignore = [
  "E501",   # line too long (formatter handles this)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports ok in __init__

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
